--- a/src/pages/tab-home/tab-home.html
+++ b/src/pages/tab-home/tab-home.html
@@ -6,6 +6,7 @@
         <div class="box-c-right">
           <h2>สวัสดี</h2>
           <p>คุณกฤตนัย</p>
+          <p>{{email}}</p>
           <button ion-button color="danger" round (click)="register()">ลงทะเบียน</button>
         </div>
 
