--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -25,7 +25,7 @@
 </ion-item>
 
 <ion-item>
-    <ion-label floating >รหัสผ่าน</ion-label>
+    <ion-label floating color="btn">รหัสผ่าน</ion-label>
     <ion-input type="password" [(ngModel)]="userData.password" ></ion-input>
   </ion-item>
 
@@ -39,7 +39,7 @@
       <ion-input type="file" [(ngModel)]="userData.profile" ></ion-input>
     </ion-item>
 
-    <p> <button ion-button block (click)="register()">ลงทะเบียน</button></p>
+    <p> <button ion-button block (click)="register()" >ลงทะเบียน</button></p>
 
  
 </ion-content>
