--- a/src/pages/tab-article/tab-article.html
+++ b/src/pages/tab-article/tab-article.html
@@ -24,7 +24,7 @@
       </ion-refresher>
 
   <ion-list>
-    <ion-item *ngFor="let cdata of responseData"(click)="patientDetail(cdata.hn)">
+    <ion-item *ngFor="let cdata of responseData"(click)="patientDetail(cdata.cid)">
       <ion-thumbnail item-start>
         <img src="http://localhost/ionic_api/images/{{cdata.img}}">
       </ion-thumbnail>
@@ -32,7 +32,7 @@
       <h2> ชื่อ สกุล : {{cdata.pname}}{{cdata.fname}}  {{cdata.lname}}            {{cdata.department}}</h2>
       <p>เลขบัตรประชาชน : {{cdata.cid}}  วันเกิด : {{cdata.birthday}}</p>
 
-      <button ion-button clear item-end (click)="patientDetail(cdata.hn)">View</button>
+      <button ion-button clear item-end (click)="patientDetail(cdata.cid)">View</button>
     </ion-item>
 
     
