ลิงค์หน้าขอใช้รถยนต์หน้าแรก

--- a/src/pages/side-payment/side-payment.html
+++ b/src/pages/side-payment/side-payment.html
@@ -11,7 +11,7 @@
         <ion-icon name="menu"></ion-icon>
     
         </button>
-        <ion-title>ชำระเงิน</ion-title>
+        <ion-title>ข้อมูลส่วนตัว</ion-title>
       </ion-navbar>
 
 </ion-header>
