--- a/src/pages/tab-home/tab-home.html
+++ b/src/pages/tab-home/tab-home.html
@@ -16,18 +16,19 @@
   <ion-grid>
       <ion-row>
         <ion-col class="list-menu">
-          <img src="assets/imgs/course.png" alt="">
-          <h3>หลักสูตร</h3>
+          <img src="assets/imgs/course.png" alt="" (click)="opencar()">
+          <h3>ขอใช้รถยนต์</h3>
+         
         </ion-col>
 
         <ion-col class="list-menu">
             <img src="assets/imgs/promotion.png" alt="">
-            <h3>โปรโมชั่น</h3>
+            <h3>คนไข้วันนี้</h3>
         </ion-col>
 
         <ion-col class="list-menu">
             <img src="assets/imgs/point.png" alt="">
-            <h3>แลกคะแนน</h3>
+            <h3>เขียนความเสี่ยง</h3>
         </ion-col>
 
       </ion-row>
@@ -35,17 +36,17 @@
       <ion-row>
           <ion-col class="list-menu">
             <img src="assets/imgs/book.png" alt="">
-            <h3>หนังสือ</h3>
+            <h3>หนังสือเข้า</h3>
           </ion-col>
   
           <ion-col class="list-menu">
               <img src="assets/imgs/booking.png" alt="">
-              <h3>จองคอร์ส</h3>
+              <h3>แจ้งซ่อม</h3>
           </ion-col>
   
           <ion-col class="list-menu">
               <img src="assets/imgs/album.png" alt="">
-              <h3>สถานะสมาชิก</h3>
+              <h3>ถ่ายรูปคนไข้</h3>
           </ion-col>
   
         </ion-row>
@@ -53,7 +54,7 @@
         <ion-row>
             <ion-col class="list-menu">
               <img src="assets/imgs/course.png" alt="">
-              <h3>สภาพอากาศ</h3>
+              <h3>แจ้งจากฝ่ายต่าง ๆ</h3>
             </ion-col>
     
             <ion-col class="list-menu">
