--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,6 @@
 <ion-tabs>
   <ion-tab tabIcon="home"[root]="tab1Root"tabTitle="หน้าหลัก" ></ion-tab>
-  <ion-tab tabIcon="book"[root]="tab2Root"tabTitle="หลักสูตร" ></ion-tab>
   <ion-tab tabIcon="chatboxes"[root]="tab3Root"tabTitle="รายการใช้รถยนต์" ></ion-tab>
   <ion-tab tabIcon="chatboxes"[root]="tab4Root"tabTitle="คนไข้วันนี้" ></ion-tab>
-  <ion-tab tabIcon="mail-open"[root]="tab5Root"tabTitle="ติดต่อเรา" ></ion-tab>
+  <ion-tab tabIcon="mail-open"[root]="tab5Root"tabTitle="เกี่ยวกับเรา" ></ion-tab>
 </ion-tabs>
