--- a/src/pages/tab-home/tab-home.html
+++ b/src/pages/tab-home/tab-home.html
@@ -35,8 +35,8 @@
 
       <ion-row>
           <ion-col class="list-menu">
-            <img src="assets/imgs/book.png" alt="">
-            <h3>หนังสือเข้า</h3>
+            <img src="assets/imgs/book.png" alt="" (click)="openSignatureModel()">
+            <h3>เก็บลายเซ็นคนไข้</h3>
           </ion-col>
   
           <ion-col class="list-menu">
@@ -66,7 +66,7 @@
                 <img src="assets/imgs/location.png" alt="">
                 <h3>แผนที่ตั้ง</h3>
             </ion-col>
-    
+       
           </ion-row>
     </ion-grid>
 
